src/components/Card/card.module.scss
@use '../../scss/config.scss' as *;

.card {
    @include border(primary-50);
    @include border-radius(md);
    @include layout(flex, column);
    @include background(primary-70);

    &.secondary {
        @include background(primary-60);

        .title {
            @include background(primary-70);
        }
    }

    .title {
        @include spacing(p-default);
        @include border(primary-50, bottom);
        display: block;
    }

    .body {
        @include spacing(p-default);
        @include size('h100%');
        @include position(relative);

        &.compact {
            @include border(20px, primary-60);
            @include spacing(p-3xl);
            @include background(primary-70);
        }
    }
}

a.card {
    @include typography(none);
}

